# bluebird-infer

./: .env.example  .gitignore  Dockerfile.analyzer  Dockerfile.base  Dockerfile.melody  Dockerfile.music  Dockerfile.similarity  Dockerfile.voice  README.md  VOICE_POD_DAY5_SUMMARY.md  VOICE_POD_DAYS67_SUMMARY.md  VOICE_POD_ROADMAP.md  VOICE_POD_VALIDATION_REPORT.md  docker-compose.pods.yml  pyproject.toml
libs/bbcore/: __init__.py  audio.py  config.py  logging.py  s3.py
libs/bbfeatures/: __init__.py  bpm_detection.py  key_detection.py  ngram.py
libs/bbmelody/: __init__.py  chord_utils.py  generator.py  midi_utils.py
tests/: conftest.py  test_voice_pod.py
tests/fixtures/similarity/: melodies.py
tests/similarity/: test_similarity.py
tests/test_bbfeatures/: test_basic.py
tests/test_bbmelody/: __init__.py  test_melody.py
tests/test_pods/: __init__.py  test_analyzer.py  test_melody.py  test_music.py  test_similarity.py
