[tool.poetry]
name = "bluebird-infer"
version = "0.1.0"
description = "Python inference pods for Bluebird AI music platform"
authors = ["Mike Blakeway <mike@bluebird.app>"]
readme = "README.md"
packages = [
    { include = "bbcore", from = "libs" },
    { include = "bbfeatures", from = "libs" },
    { include = "bbmelody", from = "libs" },
]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
boto3 = "^1.28.0"
soundfile = "^0.12.1"
librosa = "^0.10.1"
numpy = "^1.24.0"
scipy = "^1.10.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-exporter-otlp = "^1.21.0"
python-multipart = "^0.0.6"
fastdtw = "^0.3.4"
torch = "^2.0.0"
g2p-en = "^2.1.0"
resampy = "^0.4.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.12.0"
ruff = "^0.1.8"
mypy = "^1.7.0"
httpx = "^0.25.0"

[tool.black]
line-length = 100
target-version = ["py38"]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=libs --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
